# numen

./: .gitignore  LICENSE.txt  Makefile  README.md  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
src/numen/: __init__.py  __main__.py  cli.py
src/numen/ai/: __init__.py
src/numen/config/: __init__.py
src/numen/history/: __init__.py
src/numen/notes/: __init__.py
src/numen/templates/: __init__.py
src/numen/utils/: __init__.py
tests/: __init__.py  test_config.py
